--- a/UitleensysteemApp/app/templates/app/overview.html
+++ b/UitleensysteemApp/app/templates/app/overview.html
@@ -10,7 +10,7 @@
                 <a class="bg-slate-600 px-4 py-2 sm:py-4 rounded-2xl text-center text-slate-400 font-medium" href="logout_view">logout</a>
             </div>
             <div class="grid gap-4 sm:gap-x-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr]  grid-rows-[auto_1fr]">
-                <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500">Welcome</h1>
+                <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500">Welcome {{request.user}}</h1>
                 <div class="flex bg-slate-400 rounded-xl flex-col px-8 py-4 gap-4">
                     <h2 class="text-xl text-slate-100 font-medium">
                         {% if chosen_month_to_text %}
