--- a/UitleensysteemApp/app/templates/app/overview.html
+++ b/UitleensysteemApp/app/templates/app/overview.html
@@ -11,16 +11,22 @@
             </div>
             <div class="grid gap-4 sm:gap-x-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr]  grid-rows-[auto_1fr]">
                 <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500">Welcome {{request.user}}</h1>
-                <div class="flex bg-slate-400 rounded-xl flex-col px-8 py-4 gap-4">
-                    <h2 class="text-xl text-slate-100 font-medium">
-                        {% if chosen_month_to_text %}
-                            All events for: {{chosen_month_to_text}}, 
-                        {% endif %}
-                        {% if chosen_month_to_text %}
-                            {{chosen_months_year_to_text}}
-                        {% endif %}
-                        
-                    </h2>
+                <div class="flex bg-slate-400 rounded-xl flex-col px-8 py-4 gap-2">
+                    <div class="flex place-content-between place-items-center min-h-11">
+                        <h2 class="text-xl text-slate-100 font-medium">
+                            {% if chosen_month_to_text %}
+                                All events for: {{chosen_month_to_text}}, 
+                            {% endif %}
+                            {% if chosen_month_to_text %}
+                                {{chosen_months_year_to_text}}
+                            {% endif %}
+                            
+                        </h2>
+                        <form method="post" class="flex h-full gap-2" id="time" action="overview">{% csrf_token %}
+                            <input type="month" name="time" value="{{time}}"></input>
+                            <button type="submit" class="bg-slate-500 h-full rounded-xl px-4" form="time">Search</button>
+                        </form>
+                    </div>
                     <div class="grid content-stretch">
                         <div id="week" class="grid grid-cols-7 gap-2">
                             {% for i in days_in_chosen_month_as_set %}
@@ -73,8 +79,8 @@
 
                     </div>
                 </div>
-                <div class="flex bg-slate-400 rounded-xl p-4 sm:px-8 sm:py-4 gap-4 flex-col">
-                    <h2 class="text-xl text-slate-100 font-medium">Navigation</h2>
+                <div class="flex bg-slate-400 rounded-xl p-4 sm:px-8 sm:py-4 gap-2 flex-col">
+                    <h2 class="text-xl text-slate-100 font-medium min-h-11">Navigation</h2>
                     <div class="flex gap-4 flex-col">
                         <a class="grid bg-slate-200 rounded-md place-content-center p-4 text-lg font-medium" href="event-manager">Manage Events</a>
                         <a class="grid bg-slate-200 rounded-md place-content-center p-4 text-lg font-medium" href="user-manager">Manage Users</a>
