--- a/UitleensysteemApp/app/templates/app/user-manager.html
+++ b/UitleensysteemApp/app/templates/app/user-manager.html
@@ -53,18 +53,33 @@
                                     <li class="bg-slate-700 rounded-xl p-4">
                                         <form method="post" action="user-manager" id="{{ user.id }}">{% csrf_token %}
                                             <div class="grid bg-slate-800 rounded-2xl p-4 gap-2">
-                                                <h3 class="text-white">{{ calendar_event.eventid }}</h3>
+                                                
+                                                <h3 class="text-white">{% if request.user == user%}Your own account: {{request.user}}{% else %} Account: {{user.username}}{% endif %}</h3>
+                                                
 
                                                 <input class="text-slate-800" name="user_first_name" value="{{user.first_name}}" placeholder="Enter first name" required></input>
                                                 <input class="text-slate-800" name="user_last_name" value="{{user.last_name}}" placeholder="Enter last name" required></input>
                                                 <input class="text-slate-800" name="user_username" value="{{user.username}}" placeholder="Enter username" required></input>
+
                                                 <input type="password" class="text-slate-800" name="user_password" placeholder="Enter new password"></input>
                                                 <input type="password" class="text-slate-800" name="user_password_check" placeholder="Enter password again"></input>
+
+                                                
+                                                <label for="user_{{ user.id }}" class="text-slate-100 bg-slate-600 px-4 flex place-items-center py-2 gap-2 flex-row h-full w-full">
+                                                Staffmember Status {% if request.user == user%}(read-only){% endif %}: 
+                                                <input type="checkbox" {% if request.user == user%} disabled {% endif %}class="flex h-full w-7" id="user_{{ user.id }}" name="user_staffmember_status" {% if user.is_staff %}checked{% endif %}></input>
+                                                {% if request.user == user %}
+                                                <input type="hidden" name="old_user_staff_status" value="{{ user.is_staff }}">
+                                                {% endif %}
+                                                </label>
+                                                
 
                                             </div>
                                             <div class="flex place-content-end gap-4 py-4">
                                                 <input type="hidden" name="user_id" value="{{ user.id }}">
+                                                {% if request.user != user%}
                                                 <button type="submit" name="action" class="bg-red-200 p-4 rounded-xl sm:min-w-40 text-center" value="Delete" form="{{ user.id }}">Delete</button>
+                                                {% endif %}
                                                 <button type="submit" name="action" class="bg-green-200 p-4 rounded-xl sm:min-w-40 text-center" value="Update"form="{{ user.id }}">Update</button>
                                             </div>
                                         </form>
