--- a/UitleensysteemApp/app/templates/app/base.html
+++ b/UitleensysteemApp/app/templates/app/base.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
     <title>{% block title %} {% endblock %}</title>
     {% tailwind_css %}
 </head>
-<body class="min-h-screen bg-gradient-to-b from-slate-950 to-blue-900">
+<body class="min-h-screen bg-gradient-to-b {% if request.user.is_staff %}from-slate-950{% else%}from-slate-950 {% endif %} {% if request.user.is_staff %}to-red-900{% else%}to-blue-900 {% endif %}">
     
         {% block body %} 
 
